--- a/case6/index.html
+++ b/case6/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Case6</title>
   <style>
-    div{
+    div{t
       border: 3px solid black;
     }
     section{
